Initial version of the abstract hardware controller and socket example, and initial code for the HW keyword detector

--- a/SampleApp/src/CMakeLists.txt
+++ b/SampleApp/src/CMakeLists.txt
@@ -30,6 +30,10 @@ if(SENSORY_KEY_WORD_DETECTOR)
     target_link_libraries(SampleApp SENSORY)
 endif()
 
+if(HARDWARE_KEY_WORD_DETECTOR)
+    target_link_libraries(SampleApp HARDWARE)
+endif()
+
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     target_link_libraries(SampleApp
         "-framework CoreAudio" 
