--- a/SampleApp/src/CMakeLists.txt
+++ b/SampleApp/src/CMakeLists.txt
@@ -37,6 +37,9 @@ if(HARDWARE_KEY_WORD_DETECTOR)
     if(SOCKET_HARDWARE_CONTROLLER)
         target_link_libraries(SampleApp SOCKET)
     endif()
+    if(ALSA_HARDWARE_CONTROLLER)
+        target_link_libraries(SampleApp ALSA_HW_CONTROLLER)
+    endif()
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
