Transition SampleApp to using PortAudioWrapper.isStreaming()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory("CapabilityAgents")
 add_subdirectory("Integration")
 add_subdirectory("ApplicationUtilities")
 add_subdirectory("SampleApp")
+add_subdirectory("StressTesterApp")
 add_subdirectory("Storage")
 add_subdirectory("doc")
 
