--- a/AVSCommon/CMakeLists.txt
+++ b/AVSCommon/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library(AVSCommon SHARED
     Utils/src/Timer.cpp
     Utils/src/TimeUtils.cpp
     Utils/src/RetryTimer.cpp
+    Utils/src/DirectiveLogger.cpp
     Utils/src/UUIDGeneration.cpp)
 
 target_include_directories(AVSCommon PUBLIC
